--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -5,3 +5,66 @@ font-family: 'Montserrat', sans-serif; */
   margin: 0;
   padding: 0;
 }
+body {
+  background-color: hsl(30, 38%, 92%);
+}
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  line-height: 30px;
+}
+span {
+  font-family: "Fraunces", serif;
+  font-weight: 500;
+  font-size: 25px;
+  color: hsl(158, 36%, 37%);
+}
+p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  opacity: 0.7;
+}
+
+.left_Box {
+  width: 280px;
+  height: 400px;
+}
+.left_Box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 0 0 10px;
+}
+.right_Box {
+  width: 280px;
+  height: 400px;
+  background-color: white;
+  border-radius: 0 10px 10px 0;
+}
+
+.right_innerBox {
+  padding: 25px;
+}
+
+.money {
+  text-decoration: line-through;
+}
+
+.Cart {
+  text-align: center;
+  background-color: hsl(158, 36%, 37%);
+  color: white;
+  border-radius: 10px;
+}
+.Cart p {
+  padding: 8px;
+  opacity: 1;
+}
