--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -19,11 +19,13 @@ h1 {
   font-family: "Fraunces", serif;
   font-weight: 700;
   line-height: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 span {
   font-family: "Fraunces", serif;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 30px;
   color: hsl(158, 36%, 37%);
 }
 p {
@@ -54,8 +56,14 @@ p {
   padding: 25px;
 }
 
+#Explanation {
+  margin-bottom: 20px;
+}
+
 .money {
   text-decoration: line-through;
+  float: right;
+  transform: translate(-70%, 50%);
 }
 
 .Cart {
@@ -63,6 +71,7 @@ p {
   background-color: hsl(158, 36%, 37%);
   color: white;
   border-radius: 10px;
+  margin-top: 30px;
 }
 .Cart p {
   padding: 8px;
